argocd/infra/istio/gateway-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: authpractice-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "authpractice.local"
    - "authpractice-prod.local"
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: authpractice-gateway-https
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: authpractice-cert
    hosts:
    - "authpractice.local"
    - "authpractice-prod.local"
